tests/tooling/fixtures/native/execution/negative/octal_literal_global_divide_by_zero.objc3
module OctalLiteralGlobalDivideByZero;

let value = 0o10 / 0o0;

fn main() -> i32 {
  return value;
}
